css/csswizardry.scss
/*------------------------------------*\
    #CSSWIZARDRY
\*------------------------------------*/

/**
 * CONTENTS
 *
 * SETTINGS
 * Default..............inuitcss’ default settings.
 * Global...............Globally-available variables and settings/config.
 * Colors...............Manage our color palette in isolation.
 * Responsive...........Set up and name our breakpoints.
 *
 * TOOLS
 * Functions............inuitcss’ default functions.
 * Mixins...............inuitcss’ default mixins.
 * Mixins...............Our extension of inuitcss’ mixins.
 * Responsive...........Responsive tooling (requires responsive settings).
 * Aliases..............Aliases onto longer inuitcss variables and mixins.
 *
 * GENERIC
 * Normalize.css........A level playing field.
 * Reset................A pared back reset to remove margins.
 * Box-sizing...........Better default `box-sizing`.
 * Shared...............Sensibly and tersely share global commonalities.
 *
 * BASE
 * Page.................Page-level styles (HTML element).
 * Page.................Our extension of the inuitcss page module.
 * Headings.............Heading styles
 * Type.................Misc type styles
 * Links................Hyperlink styles
 * Lists................inuitcss list styles
 * Images...............inuitcss images
 * Quotes...............Styling for blockquotes, etc.
 *
 * OBJECTS
 * Wrappers.............Wrappers and page constraints.
 * Buttons..............inuitcss’ buttons module.
 * Layout...............inuitcss’ layout tool.
 * Box..................inuitcss’ box object.
 * Media................The media object.
 * Flag.................The flag object.
 * UI list..............inuitcss’ UI list.
 *
 * COMPONENTS
 * Page-head............Page header styles.
 * Bands................Full-width page bands.
 * Promo................Lead promo blocks on the home page.
 * Page-foot............Page footer styles.
 * Page-micro...........Page copyright styles.
 * Site-nav.............Site’s main nav area.
 * Buttons..............Extension of inuitcss’ buttons.
 * Boxes................Extension of inuitcss’ box object
 * Post.................Post-specific styles.
 * Pull-quote...........Large, featured quotes.
 * Carousel.............Pure CSS carousel component.
 * Iconic...............Iconic icon styles.
 * Feature list.........Big blocky lists of feature items.
 * Annotate.............Pure CSS figure annotations.
 * Ads..................AdPacks overrides.
 *
 * TRUMPS
 * Clearfix.............I can’t believe we still need this in 2014.
 * Widths...............Simple width helper classes.
 * Widths-responsive....Polyfill for responsive width classes.
 * Spacing..............Micro-level spacing.
 * Show/hide............Helpers to show and side stuff.
 */





/**
 * #SETTINGS
 */
@import "bower_components/inuit-defaults/settings.defaults";
@import "settings.global";
@import "settings.colors";
@import "bower_components/inuit-responsive-settings/settings.responsive";





/**
 * #TOOLS
 */
@import "bower_components/inuit-functions/tools.functions";
@import "bower_components/inuit-mixins/tools.mixins";
@import "tools.mixins";
@import "bower_components/inuit-responsive-tools/tools.responsive";
@import "tools.aliases";





/**
 * #GENERIC
 */
@import "bower_components/inuit-normalize/generic.normalize";
@import "bower_components/inuit-reset/generic.reset";
@import "bower_components/inuit-box-sizing/generic.box-sizing";
@import "bower_components/inuit-shared/generic.shared";





/**
 * #BASE
 */
@import "bower_components/inuit-page/base.page";
@import "base.page";
@import "bower_components/inuit-headings/base.headings";
@import "base.type";
@import "base.links";
@import "bower_components/inuit-lists/base.lists";
@import "bower_components/inuit-images/base.images";
@import "base.quotes";





/**
 * #OBJECTS
 */
@import "objects.wrappers";

$inuit-btn-background:      $color-btn;
$inuit-btn-radius:          3px;
$inuit-btn-border-width:    2px;
$inuit-enable-btn--small:   true;
$inuit-enable-btn--full:    true;
@import "bower_components/inuit-buttons/objects.buttons";

$inuit-enable-layout--middle:   true;
$inuit-enable-layout--bottom:   true;
$inuit-enable-layout--large:    true;
@import "bower_components/inuit-layout/objects.layout";

@import "bower_components/inuit-box/objects.box";
@import "bower_components/inuit-media/objects.media";

$inuit-enable-flag--rev:        true;
$inuit-enable-flag--responsive: true;
$inuit-flag-collapse-at:        479px !default;
@import "bower_components/inuit-flag/objects.flag";

$inuit-list-ui-border-color:    $color-gray-ui;
$inuit-enable-list-ui--small:   true;
@import "bower_components/inuit-list-ui/objects.list-ui";

/**
 * Quick, inline extension of the inuitcss list-ui object.
 */
.list-ui__title {
    display: block;
    @include font-size(12px);
    @include font-weight(bold);
    color: $color-gray-light;
    margin-bottom: 0;
}






/**
 * #COMPONENTS
 */
@import "components.page-head";
@import "components.bands";
@import "components.promo";
@import "components.page-foot";
@import "components.page-micro";
@import "components.site-nav";
@import "components.buttons";
@import "components.boxes";
@import "components.post";
@import "components.pull-quote";
@import "components.carousel";
@import "components.iconic";
@import "components.feature-list";
@import "components.annotate";
@import "components.ads";





/**
 * #TRUMPS
 */
@import "bower_components/inuit-clearfix/trumps.clearfix";

$inuit-use-fractions:   false;
@import "bower_components/inuit-widths/trumps.widths";
@import "trumps.widths-responsive";

$inuit-enable-margins:          true;
$inuit-enable-margins--none:    true;
@import "bower_components/inuit-spacing/trumps.spacing";
@import "trumps.show-hide";

